--- a/theme-overrides/main.html
+++ b/theme-overrides/main.html
@@ -2,7 +2,6 @@
 
 {% block scripts %}
 	{{ super() }}
-	
-	<script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
-	<script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us17.list-manage.com","uuid":"6098b5afe148e8cf7ad114027","lid":"d6a8f5f352"}) })</script>
+
+	<!-- Block scripts go here (for email form loaders, etc.) -->
 {% endblock %}
